resources/insights-stage/stage-mnm-sre/grafana.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: grafana
  name: metrics
spec:
  host: metrics-mnm-sre.apps.crcs02ue1.urby.p1.openshiftapps.com
  port:
    targetPort: proxy-port
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
