resources/insights-stage/stage-mnm-sre/prometheus-am.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: prometheus-am
  name: prometheus-am
spec:
  host: prometheus-am-mnm-sre.apps.crcs02ue1.urby.p1.openshiftapps.com
  port:
    targetPort: proxy-port
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-am
    weight: 100
  wildcardPolicy: None
