resources/insights-stage/stage-mnm-sre/thanos-query.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: thanos-query
  name: thanos-query
spec:
  host: thanos-query-mnm-sre.apps.crcs02ue1.urby.p1.openshiftapps.com
  port:
    targetPort: "8443"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: thanos-query
    weight: 100
  wildcardPolicy: None
